# Sorry

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/tauri-plugin-window-state/: Cargo.toml
src-tauri/tauri-plugin-window-state/src/: lib.rs
