[package]
name = "sorry"
version = "1.0.0"
description = "A Sorry App Counter"
authors = [ "AR10" ]
license = ""
repository = ""
default-run = "sorry"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri/", branch = "next" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { git = "https://github.com/tauri-apps/tauri/", branch = "next" , features = [] }
tauri-plugin-window-state = { path = "./tauri-plugin-window-state" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[workspace]
members = [
    "tauri-plugin-window-state",
]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"
